Completed the project, updated the way that items are created and stored, fixed obsolete code

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,11 +1,30 @@
 body {
   background-color: aqua;
 }
+button {
+  margin: 0 auto;
+  width: 60%;
+}
+
 img {
+  max-width: 100%;
+}
+
+h2 {
+  width: 60%;
+  margin: 0 auto;
+}
+
+a {
+  width: 60%;
+}
+
+.card-img-top {
   max-height: 40vh;
   min-height: auto;
 }
-button {
+
+#rateContainer {
+  width: 60%;
   margin: 0 auto;
-  width: 100%;
 }
